namespace WeatherGreeting.Services
{
    public interface IGreetingService
    {
        void TransmitGreeting(string greeting);
    }
}